--- a/etc/supervisord.conf
+++ b/etc/supervisord.conf
@@ -3,5 +3,5 @@ nodaemon=true
 loglevel=debug
 
 [program:sphere-go-state-service]
-command=/go/src/github.com/ninjablocks/sphere-go-state-service/sphere-go-state-service
+command=/app/sphere-go-state-service
 redirect_stderr=true
